; ModuleID = '/home/carl/AnghaBench/linux/net/vmw_vsock/extr_hyperv_transport.c_hvs_close_connection.c'
source_filename = "/home/carl/AnghaBench/linux/net/vmw_vsock/extr_hyperv_transport.c_hvs_close_connection.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vmbus_channel = type { i32 }
%struct.sock = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vmbus_channel*)* @hvs_close_connection to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hvs_close_connection(%struct.vmbus_channel* %0) #0 {
  %2 = alloca %struct.vmbus_channel*, align 8
  %3 = alloca %struct.sock*, align 8
  store %struct.vmbus_channel* %0, %struct.vmbus_channel** %2, align 8
  %4 = load %struct.vmbus_channel*, %struct.vmbus_channel** %2, align 8
  %5 = call %struct.sock* @get_per_channel_state(%struct.vmbus_channel* %4)
  store %struct.sock* %5, %struct.sock** %3, align 8
  %6 = load %struct.sock*, %struct.sock** %3, align 8
  %7 = call i32 @lock_sock(%struct.sock* %6)
  %8 = load %struct.sock*, %struct.sock** %3, align 8
  %9 = call i32 @vsock_sk(%struct.sock* %8)
  %10 = call i32 @hvs_do_close_lock_held(i32 %9, i32 1)
  %11 = load %struct.sock*, %struct.sock** %3, align 8
  %12 = call i32 @release_sock(%struct.sock* %11)
  %13 = load %struct.sock*, %struct.sock** %3, align 8
  %14 = call i32 @sock_put(%struct.sock* %13)
  ret void
}

declare dso_local %struct.sock* @get_per_channel_state(%struct.vmbus_channel*) #1

declare dso_local i32 @lock_sock(%struct.sock*) #1

declare dso_local i32 @hvs_do_close_lock_held(i32, i32) #1

declare dso_local i32 @vsock_sk(%struct.sock*) #1

declare dso_local i32 @release_sock(%struct.sock*) #1

declare dso_local i32 @sock_put(%struct.sock*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
